plugins/groovy/testdata/highlighting/RegexInCommandArg.groovy
print <error descr="Dollar-slashy strings cannot be the first argument of a command method call">$/abc/$</error>
print <error descr="Dollar-slashy strings cannot be the first argument of a command method call">$/a$bc/$</error>